tests/ui/pin_project/packed_sneaky-2.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-2.rs:8:1
   |
8  | / hidden_repr_macro! { //~ ERROR may not be used on #[repr(packed)] types
9  | |     #[pin_project]
10 | |     struct B {
11 | |         #[pin]
12 | |         field: u32,
13 | |     }
14 | | }
   | | ^ in this macro invocation
   | |_|
   |
